scaleway/data/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data
  labels:
    secret.htoh.io/required: "true"
