scaleway/data/ingress-data.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dash.htoh.app
      secretName: tls-secret-data
  rules:
    - host: dash.htoh.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-superset
                port:
                  name: http
